Added Rushing Mulch photos and King Patio photo to both Gallery and before and after, changed CSS img Id call, to class call LINE 207-220

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
             <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio"> 
             <img class="zoom" id="img12" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20241016_113350.jpg" alt="Block bed-edge">
             <img class="zoom" id="img22" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250421_112431 1.jpg" alt="Umbrella Tree">
+            <img class="zoom" id="img30" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing8.jpg" alt="Rushing8">
+            <img class="zoom" id="img31" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing9.jpg" alt="Rushing9">
+            <img class="zoom" id="img32" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing10.jpg" alt="Rushing10">
+            <img class="zoom" id="img33" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing11.jpg" alt="Rushing11">
+            <img class="zoom" id="img34" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/KingPatio.jpg" alt="Patio">
             <br>
             <div id="beforeAfter">Before And After:</div>
             <br>
@@ -87,6 +92,15 @@
                 <img class="fadeImg" id="img23" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250409_101832.jpg" alt="Gigantic-bush-before">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img24" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250421_135558 1.jpg" alt="Gigantic-bush-after">
+                <br>
+                <img class="fadeImg" id="img29" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing1.jpg" alt="Rushing1-before">
+                <img class="fadeImg" id="img25" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing2.jpg" alt="Rushing2-before">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img26" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing8.jpg" alt="Rushing8-after">
+                <br>
+                <img class="fadeImg" id="img27" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing5.jpg" alt="Rushing5-before">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img28" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing6.jpg" alt="Rushing6-after">
             </div>
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
