Added Big Bush img

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <img class="zoom" id="img32" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing10.jpg" alt="Rushing10">
             <img class="zoom" id="img33" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing11.jpg" alt="Rushing11">
             <img class="zoom" id="img34" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/KingPatio.jpg" alt="Patio">
+            <img class="zoom" id="img35" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/BigBush.jpg" alt="BigBush">
             <br>
             <div id="beforeAfter">Before And After:</div>
             <br>
