added "and more...." to service area section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <section id="serviceArea">  <!--Service area with Map and named locations-->
             <p>Who and where do I serve:</p>
-            <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Beverly Hills, Citrus Springs, Floral City, Hernando, Crystal River, Dunnellon, Homosassa</span></p>
+            <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Beverly Hills, Citrus Springs, Floral City, Hernando, Crystal River, Dunnellon, Homosassa, and more....</span></p>
                 <img class="zoom" id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg" alt="Florida map">
             <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
         </section>
