Added LongBush, LongBush2 img

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                 <img class="fadeImg" id="img27" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing5.jpg" alt="Rushing5-before">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img28" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing6.jpg" alt="Rushing6-after">
+                <br>
+                <img class="fadeImg" id="img37" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/LongBush.jpg" alt="LongBush">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img38" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/LongBush2.jpg" alt="LongBush2">
             </div>
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
