--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
             <a class="nav-link" href="#companyName">Welcome</a>  
             <a class="nav-link" href="#services">Services</a>
-            <a class="nav-link" href="#images">Gallery</a>
             <a class="nav-link" href="#about-me">About Me</a>
+            <a class="nav-link" href="#images">Gallery</a>
             <a class="nav-link" href="#contacts">Contact-Us</a>
         </nav>
     </head>
@@ -50,6 +50,10 @@
                     </div>
                     <div class="col" id="col-3"><img class="list-img" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes"></div>
             </div>
+            <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
+        <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High School. After school I started working as an apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I then became a <strong>liscenced</strong> Spray Technitian with certifications in turfgrass, pest, and ornamenal weeds through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mowing and landscape guy, I am the exception.</p>
+        <p id="mission"><span id="missionTitle">Mission Statement:</span><br>-To provide the highest Quality work around at an affordable cost.<br>-To bring my hard work ethic, punctuality, experience, expertise, trust, and neighbor like mentality to the landscape trade in Citrus County.<br>-To gain long term customers through earned credit, artistic approach, and a reputation built on high quality and value.</p>
+        <p id="bookNow">Open for business<br>Give us a call!!!<br>Email or msg anytime!!!</p>
         <div id="photo-text">Photo Gallery:</div>
         <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
             <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg" alt="3-teir lines">
@@ -107,13 +111,18 @@
                 <img class="fadeImg" id="img37" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/LongBush.jpg" alt="LongBush">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img38" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/LongBush2.jpg" alt="LongBush2">
+                <br>
+                <img class="fadeImg" id="img39" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Holly1.jpg" alt="Holly1">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img40" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Holly2.jpg" alt="Holly2">
+                <br>
+                <img class="fadeImg" id="img41" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Bush1.jpg" alt="Bush1">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img42" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Bush2.jpg" alt="Bush2">
             </div>
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
-        <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
-        <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High School. After school I started working as an apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I then became a <strong>liscenced</strong> Spray Technitian with certifications in turfgrass, pest, and ornamenal weeds through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mowing and landscape guy, I am the exception.</p>
-        <p id="mission"><span id="missionTitle">Mission Statement:</span><br>-To provide the highest Quality work around at an affordable cost.<br>-To bring my hard work ethic, punctuality, experience, expertise, trust, and neighbor like mentality to the landscape trade in Citrus County.<br>-To gain long term customers through earned credit, artistic approach, and a reputation built on high quality and value.</p>
-        <p id="bookNow">Open for business<br>Give us a call!!!<br>Email or msg anytime!!!</p>
+        
     <!-- form for submiting a message to email-TODO:need js for POST action-->
         <section id="form">
             <div id="ContactUs-FormTitle">Contact Us:</div>
