-Added Review section   -Title   -Link to review page   -QR code -Added CSS for Review section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a class="nav-link" href="#companyName">Welcome</a>  
             <a class="nav-link" href="#services">Services</a>
             <a class="nav-link" href="#about-me">About Me</a>
+            <a class="nav-link" href="#review">Review</a>
             <a class="nav-link" href="#images">Gallery</a>
             <a class="nav-link" href="#contacts">Contact-Us</a>
         </nav>
@@ -50,10 +51,15 @@
                     </div>
                     <div class="col" id="col-3"><img class="list-img" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes"></div>
             </div>
-            <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
+        <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
         <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High School. After school I started working as an apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I then became a <strong>liscenced</strong> Spray Technitian with certifications in turfgrass, pest, and ornamenal weeds through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mowing and landscape guy, I am the exception.</p>
         <p id="mission"><span id="missionTitle">Mission Statement:</span><br>-To provide the highest Quality work around at an affordable cost.<br>-To bring my hard work ethic, punctuality, experience, expertise, trust, and neighbor like mentality to the landscape trade in Citrus County.<br>-To gain long term customers through earned credit, artistic approach, and a reputation built on high quality and value.</p>
         <p id="bookNow">Open for business<br>Give us a call!!!<br>Email or msg anytime!!!</p>
+        <div id="review">
+            <p id="reviewSectionTitle">Review Us</p>
+            <p id="reviewBody">Review Us At:<br><a class="review_http" target="_blank" href="Https://g.page/r/CVI9I6zDWccKEAI/review">Https://g.page/r/CVI9I6zDWccKEAI/review</a><br><br> Or scan the QR code with your mobile device</p>
+            <img class="QR" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/ArtOfLawnCareLLC-GoogleReview.png" alt="QRcode">
+        </div>
         <div id="photo-text">Photo Gallery:</div>
         <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
             <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg" alt="3-teir lines">
