Added Highland Before and After photos

--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
                 <img class="fadeImg" id="img41" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Bush1.jpg" alt="Bush1">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img42" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Bush2.jpg" alt="Bush2">
+                <br>
+                <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland1Before.jpg" alt="Highland1">
+                <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland2Before.jpg" alt="Highland2">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img44" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland1After.jpg" alt="Highland1After">
+                <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland2After.jpg" alt="Highland2After">
+                <br>
+                <img class="fadeImg" id="img45" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland3Before.jpg" alt="Highland3">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img46" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland3After.jpg" alt="Highland3After">
             </div>
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
