made slight changes to html for easier reading -moved all <br> in images to nested -added comment for payment section -deleted unneeded spaces and empty lines

--- a/index.html
+++ b/index.html
@@ -103,45 +103,45 @@
                 <img class="fadeImg" id="img20" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_122853_d618ceb0.jpg" alt="Side-hedge">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img21" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_174953_1baa0a66.jpg" alt="Side-hedge-After">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img23" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250409_101832.jpg" alt="Gigantic-bush-before">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img24" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250421_135558 1.jpg" alt="Gigantic-bush-after">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img29" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing1.jpg" alt="Rushing1-before">
                 <img class="fadeImg" id="img25" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing2.jpg" alt="Rushing2-before">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img26" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing8.jpg" alt="Rushing8-after">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img27" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing5.jpg" alt="Rushing5-before">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img28" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing6.jpg" alt="Rushing6-after">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img37" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/LongBush.jpg" alt="LongBush">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img38" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/LongBush2.jpg" alt="LongBush2">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img39" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Holly1.jpg" alt="Holly1">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img40" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Holly2.jpg" alt="Holly2">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img41" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Bush1.jpg" alt="Bush1">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img42" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Bush2.jpg" alt="Bush2">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland1Before.jpg" alt="Highland1">
                 <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland2Before.jpg" alt="Highland2">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img44" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland1After.jpg" alt="Highland1After">
                 <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland2After.jpg" alt="Highland2After">
-                <br>
+                    <br>
                 <img class="fadeImg" id="img45" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland3Before.jpg" alt="Highland3">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img46" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland3After.jpg" alt="Highland3After">
             </div>
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
-        <section id="payments">
+        <section id="payments"> <!--Section for payment options-->
             <p id="paymentHead">Payments</p>
                 <p class="payTextHead">Pay Via Paypal:</p>
                     <a class="paylink" href="https://www.paypal.com/paypalme/artberger265" target="_blank">
@@ -162,8 +162,7 @@
                         <img class="zelleQR" id="zelleQR" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/ZelleAolcQR-edit1.jpg" alt="zelleQR">
                     </a>
         </section>
-    <!-- form for submiting a message to email-TODO:need js for POST action-->
-        <section id="form">
+        <section id="form"> <!-- form for submiting a message to email-->
             <div id="contactUs-FormTitle">Contact Us:</div><br>
             <form id="contact-form" 
             action="process-form" method="POST"
@@ -181,7 +180,6 @@
             <button id="submitButton" type="submit" value="Submit"><strong>Send</strong></button>
             </form>
         </section>
-    
         <p id="contact-section">Our Contact Info:</p>
         <p id="contacts">I can be reached via call or text anytime at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
