--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         Email:<br>
                 <input class="form-input" type="email" name="Contact-Email" placeholder="Your E-mail" required><br><br> 
         Message:<br> 
-                <textarea id="form-input-area" name="Contact-Message" rows="6″ cols="20″ placeholder="Your Message" required>
+                <textarea id="form-input-area" name="Contact-Message" rows="6" cols="20" placeholder="Your Message" required>
                 </textarea>
                 <p id="message-error"></p><br>
             <button id="submitButton" type="submit" value="Submit"><strong>Send</strong></button>
