--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="#about-me">About Me</a>
             <a class="nav-link" href="#payments">Payments</a>
             <a class="nav-link" href="#review">Review</a>
-            <a class="nav-link" href="#images">Gallery</a>
+            <a class="nav-link" href="https://gallery.artoflawncare.com" target="_blank" rel="noopener noreferrer">Gallery</a>
             <a class="nav-link" href="#contacts">Contact-Us</a>
         </nav>
     </head>
