--- a/index.html
+++ b/index.html
@@ -187,4 +187,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
         <script src="index.js"></script>
     </body>
+    <footer>
+        &copy; 2025 The Art of Lawn Care LLC
+    </footer>
 </html>    
