--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet"/>
     <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
-    <title>Document</title>
+    <title>ArtofLawnCareLLC</title>
 </head>
 <body>
             <div id="photo-text">Photo Gallery:</div>
@@ -92,4 +92,5 @@
   <footer>
     &copy; 2025 The Art of Lawn Care LLC
   </footer>
+
 </html>
