--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="#about-me">About Me</a>
             <a class="nav-link" href="#payments">Payments</a>
             <a class="nav-link" href="#review">Review</a>
-            <a class="nav-link" href="https://gallery.artoflawncare.com" target="_blank" rel="noopener noreferrer">Gallery</a>
+            <a class="nav-link" href="https://artoflawncare.com/gallery" target="_blank" rel="noopener noreferrer">Gallery</a>
             <a class="nav-link" href="#contacts">Contact-Us</a>
         </nav>
     </head>
@@ -23,7 +23,7 @@
             <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
             <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
         </section>
-        <div id="welcomeMsg">Welcome to <strong>'The Art of Lawn Care'</strong><br>A new start-up, fair-priced <strong>High Quality</strong> Lawn Management service.<br>From Artistic lawn cutting and Precise String trimming to Landscapes or Pathways.<br>If your job needs an Artistic touch we are the right company for you.
+        <div id="welcomeMsg">Welcome to <strong>'The Art of Lawn Care'</strong><br>A fair-priced <strong>High Quality</strong> Lawn Management service.<br>From Artistic lawn cutting and Precise String trimming to Landscapes or Pathways.<br>If your job needs an Artistic touch we are the right company for you.
         </div>
         <section id="serviceArea">  <!--Service area with Map and named locations-->
             <p>Who and where do I serve:</p>
