Changed Title to reflect Host domain removed "photo disclaimer"

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet"/>
     <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
-    <title>Document</title>
+    <title>ArtofLawnCareLLC</title>
 </head>
 <body>
             <div id="photo-text">Photo Gallery:</div>
@@ -86,7 +86,6 @@
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img46" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland3After.jpg" alt="Highland3After">
             </div>
-            <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
 </body>
   <footer>
