-copied payment code from main site file -copied css from main site file -recolored  colorchange keyframe -resized title -added paymentQs  <p> element and CSS with phone and email links for questions

--- a/payments/index.html
+++ b/payments/index.html
@@ -8,7 +8,27 @@
     <title>ArtofLawnCareLLC</title>
 </head>
 <body>
-    Hi
+    <section id="payments"> <!--Section for payment options-->
+        <p id="paymentHead">Payments:</p>
+            <p class="payTextHead">Pay Via Paypal:</p>
+                <a class="paylink" href="https://www.paypal.com/paypalme/artberger265" target="_blank">
+                    <button class="payBtn">
+                        Take me to <strong>PayPal</strong>
+                    </button>
+                </a>
+            <p class="payTextHead">Pay Via Yardbook:</p>
+                <a class="paylink" href="https://www.yardbook.com/244139/pay_now" target="_blank">
+                    <button class="payBtn">
+                        Take me to <strong>Yardbook</strong>
+                    </button>
+                </a>
+            <p id="imporMsg"><strong>IMPORTANT:</strong><br>Have your invoice number handy when <br>visiting Yardbook pay link.</p>
+            <p class="payTextHead">Pay Via Zelle QR code:</p><br>
+                <a class="qrBtn" href="https://zellepay.com/qr-codes/?data=s/?data=eyJhY3Rpb24iOiJwYXltZW50liwibmFtZSl6IlRlRSBBUlQgT0YgTEFXTiBDQVJFlExMQylsInFyQ29kZU5hbWUiOiJUSEUgQVJUlE9GIExBV04gQ0FSRSBMTEMiLCJ0b2tlbiI6ImFydHl6aWxsYUBnbWFpbC5jb2oifQ==" target="_blank">
+                    <img class="zelleQR" id="zelleQR" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/ZelleAolcQR-edit1.jpg" alt="zelleQR">
+                </a>
+            <p id="paymentQs">Any questions or inquiries about payments please contact the business @<br> <a class="tele" href="tel:352-419-1307">352-419-1307</a><br> Or by email @<a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com"</a></p>
+    </section>
 </body>
 <footer>
     &copy; 2025 The Art of Lawn Care LLC
