--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a class="nav-link" href="#companyName">Welcome</a>  
             <a class="nav-link" href="#services">Services</a>
             <a class="nav-link" href="#about-me">About Me</a>
-            <a class="nav-link" href="#payments">Payments</a>
+            <a class="nav-link" href="https://artoflawncare.com/payments" target="_blank" rel="noopener noreferrer">Payments</a>
             <a class="nav-link" href="#review">Review</a>
             <a class="nav-link" href="https://artoflawncare.com/gallery" target="_blank" rel="noopener noreferrer">Gallery</a>
             <a class="nav-link" href="#contacts">Contact-Us</a>
@@ -81,27 +81,6 @@
                 <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland2After.jpg" alt="Highland2After">
             </a>
             <p>Click to see more</p>
-        </section>
-        <section id="payments"> <!--Section for payment options-->
-            <p id="paymentHead">Payments</p>
-                <p class="payTextHead">Pay Via Paypal:</p>
-                    <a class="paylink" href="https://www.paypal.com/paypalme/artberger265" target="_blank">
-                        <button class="payBtn">
-                            Take me to <strong>PayPal</strong>
-                        </button>
-                    </a>
-                <p class="payTextHead">Pay Via Yardbook:</p>
-                    <a class="paylink" href="https://www.yardbook.com/244139/pay_now" target="_blank">
-                        <button class="payBtn">
-                            Take me to <strong>Yardbook</strong>
-                        </button>
-                    </a>
-                        <p id="imporMsg"><strong>IMPORTANT:</strong><br>Have your invoice number handy when <br>visiting Yardbook pay link.</p>
-                <p class="payTextHead">Pay Via Zelle QR code:</p>
-                <br>
-                    <a class="qrBtn" href="https://zellepay.com/qr-codes/?data=s/?data=eyJhY3Rpb24iOiJwYXltZW50liwibmFtZSl6IlRlRSBBUlQgT0YgTEFXTiBDQVJFlExMQylsInFyQ29kZU5hbWUiOiJUSEUgQVJUlE9GIExBV04gQ0FSRSBMTEMiLCJ0b2tlbiI6ImFydHl6aWxsYUBnbWFpbC5jb2oifQ==" target="_blank">
-                        <img class="zelleQR" id="zelleQR" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/ZelleAolcQR-edit1.jpg" alt="zelleQR">
-                    </a>
         </section>
         <section id="form"> <!-- form for submiting a message to email-->
             <div id="contactUs-FormTitle">Contact Us:</div><br>
