-deleted whitespace -moved h1 and h2 out from in front of img head -changed CSS- font size, color, and text shadow of h1 and h2 -removed before and after from CSS -

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </nav>
     </head>
     <body>
-        <section id="imgHead">   <!--Name, Motto, Background photo-->
-            <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
-            <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
+        <h1 class="headTxt" id="companyName"><strong>The Art Of Lawn Care</strong></h1>
+        <h2 class="headTxt" id="motto">Artistic Lawn Engineering</h2>
+        <section id="imgHead">   <!--Background photo--> 
         </section>
         <div id="welcomeMsg">Welcome to <strong>'The Art of Lawn Care'</strong><br>A fair-priced <strong>High Quality</strong> Lawn Management service.<br>From Artistic lawn cutting and Precise String trimming to Landscapes or Pathways.<br>If your job needs an Artistic touch we are the right company for you.
         </div>
