-Added Welcome text and footer -linked css -created index.py for py code

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adventure Game</title>
+    <link href="index.css" rel="stylesheet"/>
+    <title>The Lone Road</title>
 </head>
 <body>
-    
+    <p>Welcome<br> Adventure Game <br> "The Lone Road" By Art Berger <br>Coming Soon</p>
 </body>
+<footer>
+    &copy; 2025 The Art of Lawn Care LLC
+</footer>
 </html>
