-created templates folder -added html to templated with "POST" form -added flask code for first branch -added h1

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <p>Welcome<br> Adventure Game <br> "The Lone Road" By Art Berger <br>Coming Soon</p>
+    <h1>The Lone Road</h1>
 </body>
 <footer>
-    &copy; 2025 The Art of Lawn Care LLC
+    &copy; Art Berger
 </footer>
 </html>
