-Changed to JS instead of flask -deleted index.py, templates folder, and theLoneRoad.html files -added index.js

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>Welcome<br> Adventure Game <br> "The Lone Road" By Art Berger <br>Coming Soon</p>
     <h1>The Lone Road</h1>
+    <script src="index.js"></script>
 </body>
 <footer>
     &copy; Art Berger
