-Added branches to JS file for game choices -added reset button after win lose condition -added CSS for title, game Text, buttons, and footer

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -7,11 +7,15 @@
     <title>The Lone Road</title>
 </head>
 <body>
-    <p>Welcome<br> Adventure Game <br> "The Lone Road" By Art Berger <br>Coming Soon</p>
-    <h1>The Lone Road</h1>
+    <div class="page-container">
+        <h1 id="title">The Lone Road</h1>
+        <main>
+            <pre id="question"></pre>
+            <div id="buttons"></div>
+        </main>
+        <footer>Thanks for playing:<br>"The Lone Road"<br>By Art Berger</footer>
+    </div>
     <script src="index.js"></script>
 </body>
-<footer>
-    &copy; Art Berger
-</footer>
+
 </html>
