-Added "secret" hidden button for secret branch access on mobile     -event listener for render(secret path)      -css for secret-zone

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="page-container">
         <h1 id="title">The Lone Road</h1>
+        <div id="secret-zone">🔒</div>
         <main>
             <pre id="question"></pre>
             <div id="buttons"></div>
