-Added audio file in assets/audio -Added comment for Timeout -Added audio link in html -Added JS for audio for secret zone

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="page-container">
         <h1 id="title">The Lone Road</h1>
+        <audio id="hatchAudio" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/door-creaking-audio.mp3" preload="auto"></audio>
         <div id="secret-zone">🔒</div>
         <main>
             <pre id="question"></pre>
