-Added game-image and game-audio  elements in HTML -Added mosquito sound and bones animation to mosquitoLoss object -Added handleLoss() function -added isLoss: T/F and LossType to objects -added "hatch anchor for secret hatch positioning

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <div class="page-container">
-        <h1 id="title">The Lone Road</h1>
-        <audio id="hatchAudio" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/door-creaking-audio.mp3" preload="auto"></audio>
-        <div id="secret-zone">🔒</div>
+        <div id="title-container">
+            <h1 id="title">The Lone Roa<span id="hatch-anchor">d<div id="secret-zone">🔒</div></span>
+                <audio id="hatchAudio" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/door-creaking-audio.mp3" preload="auto"></audio>
+            </h1>
+        </div>
         <main>
             <pre id="question"></pre>
             <div id="buttons"></div>
+            <div id="game-image"></div>
+            <audio id="game-audio" preload="auto"></audio>
         </main>
         <footer>Thanks for playing:<br>"The Lone Road"<br>By Art Berger</footer>
     </div>
