--- a/adventure/index.html
+++ b/adventure/index.html
@@ -21,7 +21,7 @@
         </main>
         <footer>Thanks for playing:<br>"The Lone Road"<br>By Art Berger</footer>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js?v=2"></script>
 </body>
 
 </html>
