-Removed "oper for business" from bookNow section -Created aboutme sub-directory to house about me section     - html, css files     -coped html and css about me      sections     -Added NavBar to gallery,payments, and about me sub-directories     -

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,6 +6,16 @@
     <link href="index.css" rel="stylesheet"/>
     <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
     <title>ArtofLawnCareLLC</title>
+    <nav class="navbar"> <!--NavBar for section quicklink-->
+        <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
+        <a class="nav-link" href="#companyName">Welcome</a> 
+        <a class="nav-link" href="#about-me">About Me</a> 
+        <a class="nav-link" href="#services">Services</a>
+        <a class="nav-link" href="https://artoflawncare.com/payments" target="_blank" rel="noopener noreferrer">Payments</a>
+        <a class="nav-link" href="https://artoflawncare.com/gallery" target="_blank" rel="noopener noreferrer">Gallery</a>
+        <a class="nav-link" href="#review">Review</a>
+        <a class="nav-link" href="#contacts">Contact-Us</a>
+    </nav>
 </head>
 <body>
     <div id="title">Photo Gallery:</div>
