--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,7 +9,7 @@
     <nav class="navbar"> <!--NavBar for section quicklink-->
         <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
         <a class="nav-link" href="#companyName">Welcome</a> 
-        <a class="nav-link" href="#about-me">About Me</a> 
+        <a class="nav-link" href="https://artoflawncare.com/aboutme" target="_blank" rel="noopener noreferrer">About Me</a> 
         <a class="nav-link" href="#services">Services</a>
         <a class="nav-link" href="https://artoflawncare.com/payments" target="_blank" rel="noopener noreferrer">Payments</a>
         <a class="nav-link" href="https://artoflawncare.com/gallery" target="_blank" rel="noopener noreferrer">Gallery</a>
