--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Residential, commercial, lawncare, maintenance, service, landscaping near me, mowing, mulching, bush trimming, leaf removal, debris clean up, pressure washing, patio, pathway, Inverness, Citrus County ">
         <link href="index.css" rel="stylesheet"/>
         <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
-        <nav class="navbar"> <!--NavBar for section quicklink-->
+        <nav class="navbar"> <!--NavBar for section and sub-directory quicklink-->
             <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
             <a class="nav-link" href="#companyName">Welcome</a> 
             <a class="nav-link" href="https://artoflawncare.com/aboutme" target="_blank" rel="noopener noreferrer">About Me</a> 
@@ -55,7 +55,7 @@
         <p id="bookNow">Give us a call!!!<br>Email or msg anytime!!!</p>
         </div>
         <div id="photo-text">Photo's:</div>
-        <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
+        <section class="imgContainer" id="images"> <!--Image showcase link to gallery sub-dir-->
             <a class="imgBtn" href="https://artoflawncare.com/gallery" target="_blank" rel="noopener noreferrer">
                 <img class="zoom" id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg" alt="Memorial">
             </a>
@@ -97,7 +97,7 @@
                 <p id="message-error"></p><br>
             <button id="submitButton" type="submit" value="Submit"><strong>Send</strong></button>
             </form>
-        </section>
+        </section> <!--Contact Info-->
         <p id="contact-section">Our Contact Info:</p>
         <p id="contacts">I can be reached via call or text anytime at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
