--- a/payments/index.html
+++ b/payments/index.html
@@ -8,13 +8,13 @@
     <title>ArtofLawnCareLLC</title>
     <nav class="navbar"> <!--NavBar for section quicklink-->
         <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
-        <a class="nav-link" href="#companyName">Welcome</a> 
+        <a class="nav-link" href="/index.html#companyName">Welcome</a> 
         <a class="nav-link" href="https://artoflawncare.com/aboutme" target="_blank" rel="noopener noreferrer">About Me</a> 
-        <a class="nav-link" href="#services">Services</a>
+        <a class="nav-link" href="/index.html#services">Services</a>
         <a class="nav-link" href="https://artoflawncare.com/payments" target="_blank" rel="noopener noreferrer">Payments</a>
         <a class="nav-link" href="https://artoflawncare.com/gallery" target="_blank" rel="noopener noreferrer">Gallery</a>
-        <a class="nav-link" href="#review">Review</a>
-        <a class="nav-link" href="#contacts">Contact-Us</a>
+        <a class="nav-link" href="/index.html#review">Review</a>
+        <a class="nav-link" href="/index.html#contacts">Contact-Us</a>
     </nav>
 </head>
 <body>
