added script and css for on click photo enlarge. -commented out add ons

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -148,6 +148,16 @@
                     <img class="fadeImg" id="imgA17" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/PacificAfter8.jpg" alt="PacificAfter8">
                 </div>
         </section>
+        <!-- Script for img enlarge on click
+<script>
+  // Add click listener to all gallery images
+  document.querySelectorAll('.fadeImg, .fadeImg2, .zoom').forEach(img => {
+    img.addEventListener('click', () => {
+      img.classList.toggle('enlarged'); // toggles the "enlarged" class
+    });
+  });
+</script>
+-->
 </body>
 <footer>
     &copy; 2025 The Art of Lawn Care LLC
