Added 10 images to mulching section

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -43,7 +43,17 @@
                 <img class="zoom" id="img31" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing9.jpg" alt="Rushing9">
                 <img class="zoom" id="img32" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing10.jpg" alt="Rushing10">
                 <img class="zoom" id="img33" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Rushing11.jpg" alt="Rushing11">
-                <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland2After.jpg" alt="Highland2After">
+                <img class="fadeImg" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/Highland2After.jpg" alt="Highland2After"><br>
+                <img class="zoom" id="img43" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/cav3.jpg" alt="">
+                <img class="zoom" id="imgA18" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/cav4.jpg" alt="">                
+                <img class="zoom" id="imgA19" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/cav5.jpg" alt="">
+                <img class="zoom" id="imgA20" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/cav6.jpg" alt="">
+                <img class="zoom" id="imgA21" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/cav7.jpg" alt="">
+                <img class="zoom" id="imgA22" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/cav8.jpg" alt="">
+                <img class="zoom" id="imgA23" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/cav9.jpg" alt=""><br>
+                <img class="zoom" id="imgA24" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/red1.jpg" alt="">
+                <img class="zoom" id="imgA25" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/red2.jpg" alt="">
+                <img class="zoom" id="imgA26" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/red3.jpg" alt="">                
             </section>
                 <p class="projectImgTitle">Bush Trimming</p>
             <section class="projectImg" id="Bushes">     
