--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="#services">Services</a>
             <a class="nav-link" href="https://artoflawncare.com/payments" target="_blank" rel="noopener noreferrer">Payments</a>
             <a class="nav-link" href="https://artoflawncare.com/gallery" target="_blank" rel="noopener noreferrer">Gallery</a>
-            <a class="nav-link" href="#review">Review</a>
+            <a class="nav-link" href="Https://g.page/r/CVI9I6zDWccKEAI/review">Review</a>
             <a class="nav-link" href="#contacts">Contact-Us</a>
         </nav>
     </head>
