-Added Company Title to about me -removed border from about me -BUG:     - When minimized body stays length when text body exceeds page causing border to run into text, about-me page/FIX LATER

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -18,6 +18,7 @@
     </nav>
 </head>
 <body>
+    <div id="bodyHeader">The Art of Lawn Care</div>
     <div id="imgContainer"><!-- imgages of owner and Truck and mower--></div>
     <p id="mission"><span id="missionTitle">Mission Statement:</span><br>-To provide the highest Quality work around at an affordable cost.<br>-To bring my hard work ethic, punctuality, experience, expertise, trust, and neighbor like mentality to the landscape trade in Citrus County.<br>-To gain long term customers through earned credit, artistic approach, and a reputation built on high quality and value.</p>  
     <p id="about-me-text">About Me:</p>
