--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             <a class="nav-link" href="#contacts">Contact-Us</a>
         </nav>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4150SN19VV"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4150SN19VV');
+    </script>
     <body>
         <h1 class="headTxt" id="companyName"><strong>The Art Of Lawn Care</strong></h1>
         <h2 class="headTxt" id="motto">Artistic Lawn Engineering</h2>
